--- a/child_pages/cc-elections/Candidates/miletta_linda.html
+++ b/child_pages/cc-elections/Candidates/miletta_linda.html
@@ -12,7 +12,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Candidate Linda C. Miletta">
         <meta property="og:description" content="Running For Hopewell-Shiloh Board of Education">
-        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/linda_miletta.PNG">
+        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/linda_miletta.png">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/miletta_linda">
     </head>
 <!-- Google tag (gtag.js) -->
@@ -199,7 +199,7 @@
     </div>
 
     <div class="candidate-pic-box">
-        <img class="cover" src="../../../assets/candidates/linda_miletta.PNG" alt="Candidate photo of Linda Miletta" class="candidate-pic">
+        <img class="cover" src="../../../assets/candidates/linda_miletta.png" alt="Candidate photo of Linda Miletta" class="candidate-pic">
         <div class="candidate-pic-box-content">
         <h4 class="sub-heading" style="text-align: center;">Websites</h4>
         <div class="website">
@@ -227,7 +227,7 @@
     <br><br>
 
     <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Slightly Above Average (Surface-Level)</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Slightly Above Average</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link">
         <button class="candidate-ext-site">Transparency Standards Explained</button>
         </a>
