--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -188,8 +188,8 @@
      <br>
      <br>
 
-    <div style="background:#007BFF; color:white; text-align:center; padding:20px; border-radius:8px; margin-bottom:20px;">
-        <h1 style="margin:0; font-size:2em;">Cumberland County Commissioners Election</h1>
+    <div style="text-align:center; padding:15px; border:1px solid #ddd; border-radius:10px; box-shadow:0px 2px 6px rgba(0,0,0,0.1); margin-bottom:20px;">
+        <h1 style="margin:0;">Cumberland County Commissioners Election</h1>
     </div>
 
     <br>
